--- a/enigma/templates/enigma/enigma2.html
+++ b/enigma/templates/enigma/enigma2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
@@ -7,7 +8,7 @@
 
     <body>
         <div class="centered-content">
-            <div class="question">Quelle est la moitié de 2 + 2 ?</div>
+            <img class="fit-picture" src="http://www.psycho-tests.fr/QI/Test-3/Q1.gif" alt="test">
         </div>
         <div class="form-container">
             <form action="" method="get" class="form-example">
@@ -16,4 +17,5 @@
             </form>
         </div>
     </body>
+
 </html>
