--- a/templates/base_enigma.html
+++ b/templates/base_enigma.html
@@ -8,8 +8,7 @@
         <title>{% block title %}RH{% endblock %}</title>
 
         <!-- Compiled and minified CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {#        <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
     </head>
 {% endblock %}
