--- a/enigma/templates/enigma/enigma1.html
+++ b/enigma/templates/enigma/enigma1.html
@@ -1,16 +1,8 @@
 {% extends "base_enigma.html" %}
 
 
-{% block content %}
+{% block enigma %}
         <div class="centered-content">
             <div class="question">Quelle est la moitié de 2 + 2 ?</div>
-        </div>
-        <div class="form-container">
-            <form method="POST" class="post-form">
-                {% csrf_token %}
-                <input type="text" name="response" id="1" required>
-                <input type="number" name="time" id="1" required>
-                <input type="submit" value="Ok">
-            </form>
         </div>
 {% endblock %}
