--- a/enigma/templates/enigma/enigma2.html
+++ b/enigma/templates/enigma/enigma2.html
@@ -1,6 +1,6 @@
 {% extends "base_enigma.html" %}
 
-{% block content %}
+{% block enigma %}
         <div class="centered-content">
             <img class="fit-picture" src="http://www.psycho-tests.fr/QI/Test-3/Q1.gif" alt="test">
         </div>
