--- a/templates/base_enigma.html
+++ b/templates/base_enigma.html
@@ -19,6 +19,7 @@
 
 <body>
     <div>
+        <span id="minutes"></span>:<span id="seconds"></span>
     {% block enigma %}
     {% endblock %}
 
@@ -42,6 +43,13 @@
             var total = Math.round(+new Date()/1000) - timestamp;
             document.getElementById('time').value = total;
     });
+
+    var sec = 0;
+    function pad ( val ) { return val > 9 ? val : "0" + val; }
+    setInterval( function(){
+        document.getElementById("seconds").innerHTML=pad(++sec%60);
+        document.getElementById("minutes").innerHTML=pad(parseInt(sec/60,10));
+    }, 1000);
 
 </script>
 {% endblock %}
