add all templates

--- a/enigma/templates/enigma/enigma1_1.html
+++ b/enigma/templates/enigma/enigma1_1.html
@@ -1,5 +1,6 @@
 {% extends "base_enigma.html" %}
 
+{% block title %} Enigme 1 {% endblock %}
 
 {% block enigma %}
         <div class="centered-content">
