--- a/enigma/templates/enigma/enigma2_1.html
+++ b/enigma/templates/enigma/enigma2_1.html
@@ -1,13 +1,8 @@
 {% extends "base_enigma.html" %}
 
+{% block title %} Enigme 2 {% endblock %}
 {% block enigma %}
         <div class="centered-content">
-            <img class="fit-picture" src="http://www.psycho-tests.fr/QI/Test-3/Q1.gif" alt="test">
-        </div>
-        <div class="form-container">
-            <form action="" method="get" class="form-example">
-                <input type="text" id="1" required>
-                <input type="submit" value="Ok">
-            </form>
+            <img class="fit-picture" src="/static/pic/test-logique.jpg" alt="Test de logique">
         </div>
 {% endblock %}
