--- a/templates/base_enigma.html
+++ b/templates/base_enigma.html
@@ -3,12 +3,9 @@
 <html>
 {% block head %}
     <head>
-        <meta charset="utf-8">
+        {% block meta %}<meta charset="utf-8"> {% endblock %}
         <meta name = "viewport" content = "width = device-width, initial-scale = 0.8">
         <title>{% block title %}RH{% endblock %}</title>
-
-        <!-- Compiled and minified CSS -->
-
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
@@ -33,6 +30,7 @@
         </form>
     </div>
     {% endblock %}
+    
     </div>
 </body>
 {% block javascript %}
