add last enigma

--- a/enigma/templates/enigma/enigma2_3.html
+++ b/enigma/templates/enigma/enigma2_3.html
@@ -3,6 +3,6 @@
 {% block title %} Une image peut en cacher une autre {% endblock %}
 {% block enigma %}
         <div class="centered-content">
-            <img class="fit-picture" src="../../../static/pic/test-logique.png" alt="Test de logique">
+            <img class="fit-picture" src="/static/pic/test-logique.png" alt="Test de logique">
         </div>
 {% endblock %}
