--- a/enigma/templates/enigma/enigma3_2.html
+++ b/enigma/templates/enigma/enigma3_2.html
@@ -10,3 +10,11 @@
             </div>
         </div>
 {% endblock %}
+
+{% block javascript %}
+    <script>
+    function secret() {
+        console.log("Le mot secret est : 'virgule'");
+    }
+    </script>
+{% endblock %}
