--- a/templates/base_enigma.html
+++ b/templates/base_enigma.html
@@ -38,21 +38,21 @@
     
     </div>
 </body>
-
 <script>
-    const time_already_spent = parseInt(localStorage.getItem('time_spent')) || 0;
-    const timestamp = Math.round(+new Date() / 1000);
     document.getElementById('submit').addEventListener('click', function(){
-        const total_time_spent = parseInt((Math.round(+new Date() / 1000) - timestamp)+ time_already_spent);
-        localStorage.setItem('time_spent', total_time_spent);
-        document.getElementById('time').value = total_time_spent;
+        document.getElementById('time').value = localStorage.getItem('time_spent') || 0;
     });
 
-    let sec = 0;
+    let sec = parseInt(localStorage.getItem('time_spent')) || 0;
+    document.getElementById('seconds').innerHTML=pad(++sec%60);
+    document.getElementById('minutes').innerHTML=pad(parseInt(sec/60,10));
+
+    document.getElementById('clock').removeAttribute("hidden");
     function pad ( val ) { return val > 9 ? val : "0" + val; }
     setInterval( function(){
-        document.getElementById("seconds").innerHTML=pad(++sec%60);
-        document.getElementById("minutes").innerHTML=pad(parseInt(sec/60,10));
+        document.getElementById('seconds').innerHTML=pad(++sec%60);
+        document.getElementById('minutes').innerHTML=pad(parseInt(sec/60,10));
+        localStorage.setItem('time_spent', sec)
     }, 1000);
 </script>
 {% block javascript %}
