--- a/enigma/templates/menu/accueil.html
+++ b/enigma/templates/menu/accueil.html
@@ -6,21 +6,23 @@
         <link rel="stylesheet" href="{% static 'css/info.css' %}">
         <title>Accueil</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
+        <link href="https://fonts.googleapis.com/css?family=Oleo+Script&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <div class="centered-content">
             <div class="info">
-                <h2>Gagnez 3000€/mois en répondant à 3 questions</h2>
-                <p>Attention, les apparences sont parfois trompeuses</p>
+                <h2>SkillsFinder</h2>
+                <p>Gagnez 3000€/mois en répondant à 3 questions de logique</p>
+                
+                <a href="{% url 'enigma1_1' %}" class="link-start">
+                    <div class="button">
+                        Commencer
+                    </div>
+                </a>
+                <p class="tips">Les apparences sont parfois trompeuses</p>
             </div>
-        </div>
-        <div class="info-container">
-            <a href="{% url 'enigma1_1' %}">
-                <div>
-                    GO
-                </div>
-            </a>
         </div>
     </body>
 </html>
