--- a/enigma/templates/menu/end.html
+++ b/enigma/templates/menu/end.html
@@ -5,6 +5,7 @@
     <head>
         <link rel="stylesheet" href="{% static 'css/info.css' %}">
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
+        <link href="https://fonts.googleapis.com/css?family=Oleo+Script&display=swap" rel="stylesheet">
         <title>Accueil</title>
         <meta charset="utf-8">
     </head>
@@ -12,8 +13,9 @@
     <body>
         <div class="centered-content">
             <div class="info">
-                <h2>Félicitation, vous avez terminé ce test</h2>
-                <p>Nous vous recontacterons via les informations que vous avez renseigné précédement</p>
+                <h2>Félicitation</h2>
+                <p>Vous avez terminé ce test.</p>
+                <p>Nous vous recontacterons via les informations que vous avez renseigné précédement.</p>
             </div>
         </div>
     </body>
