--- a/templates/base_enigma.html
+++ b/templates/base_enigma.html
@@ -32,7 +32,7 @@
                 {% csrf_token %}
                 <input type="text" name="response" required>
                 <input type="number" name="time" id="time" hidden>
-                <input type="submit" id="submit" value="Ok">
+                <input type="submit" class="button" id="submit" value="OK">
             </form>
         </div>
         {% endblock %}
