--- a/enigma/templates/menu/etape1.html
+++ b/enigma/templates/menu/etape1.html
@@ -19,7 +19,7 @@
                     <input type="text" name="lastname" id="name" placeholder="Votre nom" required>
                     <input type="email" name="mail" id="email" placeholder="Votre email" required>
                     <input type="hidden" value="Continuer">
-                    <a href="{% url 'end' %}" class="link-start">
+                    <a href="{% url 'accueil' %}" class="link-start">
                         <div class="button">
                             Terminer
                         </div>
