--- a/enigma/templates/menu/etape1.html
+++ b/enigma/templates/menu/etape1.html
@@ -12,7 +12,7 @@
         <div class="centered-content">
             <div class="info">
                 <p>Merci d'avoir participé à SkillsFinder.</p>
-                <p>Nous vous recontacterons si vous avez été séléctionné.</p>
+                <p>Nous vous recontacterons si vous avez été sélectionné.</p>
                 <form method="POST" class="post-form">
                 {% csrf_token %}
                     <input type="text" name="firstname" id="name" placeholder="Votre prénom" required>
