--- a/enigma/templates/enigma/enigma1_2.html
+++ b/enigma/templates/enigma/enigma1_2.html
@@ -4,6 +4,6 @@
 
 {% block enigma %}
     <div class="centered-content">
-        <div class="question">Ykjywpéjwpekj za 2 + 2 ?</div>
+        <div class="question">Ykjywpajwpekj za 2 + 2 ?</div>
     </div>
 {% endblock %}
