feat: Stegano tips

--- a/enigma/templates/enigma/enigma2_3.html
+++ b/enigma/templates/enigma/enigma2_3.html
@@ -4,6 +4,6 @@
 
 {% block enigma %}
     <div class="centered-content">
-        <img class="fit-picture" src="/static/pic/test-logique.png" alt="Test de logique">
+        <img class="fit-picture" src="/static/pic/test-logique.png" alt="https://incoherency.co.uk/">
     </div>
 {% endblock %}
