--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-{#        <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+        <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     </head>
 {% endblock %}
 
@@ -71,4 +72,10 @@
     {% endblock %}
 </div>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+{% block javascript %}
+
+{% endblock %}
 </html>
