--- a/rh/templates/menu/dashboard.html
+++ b/rh/templates/menu/dashboard.html
@@ -18,80 +18,124 @@
 {% endblock %}
 
 {% block javascript %}
-    <script type="text/javascript">
+<script type="text/javascript">
 
-        function details ( d ) {
-            var obj = d.fields;
-            var score_logic = (obj.score1_1 + obj.score2_1 + obj.score3_1) /3;
-            var score_tools = (obj.score2_2 + obj.score3_2) / 2;
-            var score_crypto = (obj.score1_2 + obj.score1_3) / 2;
-            var score_stegano = (obj.score2_3 + obj.score3_3) / 2;
-            
-            return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+
-                '<tr>'+
-                    '<td>Logique : </td>'+
-                    '<td>'+ score_logic +'</td>'+
-                '</tr>'+
-                '<tr>'+
-                    '<td>Outils web :</td>'+
-                    '<td>'+ score_tools +'</td>'+
-                '</tr>'+
-                '<tr>'+
-                    '<td>Cryptographie</td>'+
-                    '<td>'+ score_crypto +'</td>'+
-                '</tr>'+
-                '<tr>'+
-                    '<td>Stéganographie</td>'+
-                    '<td>'+ score_stegano +'</td>'+
-                '</tr>'+
+    function details(d) {
+        // `d` is the original data object for the row
+        return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+            '<div class="row">' +
+            '<div class="col s4"><canvas id="bar-chart-attempt-' + d.pk + '"></canvas></div>' +
+            '<div class="col s4"><canvas id="bar-chart-time-' + d.pk + '"></canvas></div>' +
+            '<div class="col s4"><canvas id="bar-chart-skill-' + d.pk + '"></canvas></div>' +
+            '</div>' +
             '</table>';
-        }
-        $(document).ready(function () {
-            const table = $('#resultats').DataTable({
-                "processing": true,
-                "ajax": {
-                    "processing": true,
-                    "url": "{% url 'resultats_json' %}",
-                    "dataSrc": ""
-                },
+    }
 
-                "columns": [
+    function chart_bar(element_id, labels_x, data, label, title, type = 'bar') {
+        new Chart(document.getElementById(element_id), {
+            type: type,
+            data: {
+                labels: labels_x,
+                datasets: [
                     {
-                        "className": 'details-control',
-                        "orderable": false,
-                        "data": null,
-                        "defaultContent": ''
-                    },
-                    {"data": "pk"},
-                    {"data": "fields.lastname"},
-                    {"data": "fields.firstname"},
-                    {"data": "fields.mail"},
-                    {"data": "fields.score"},
-                    {"data": "fields.time"},
-                ],
-                "order": [[1, 'asc']]
-            });
-
-
-            // Add event listener for opening and closing details
-            $('#resultats tbody').on('click', 'td.details-control', function () {
-                var tr = $(this).closest('tr');
-                var row = table.row( tr );
-
-                if ( row.child.isShown() ) {
-                    // This row is already open - close it
-                    row.child.hide();
-                    tr.removeClass('shown');
+                        label: label,
+                        backgroundColor: ["#003f5c", "#2f4b7c", "#665191", "#a05195", "#d45087", "#f95d6a", "#ff7c43", "#ffa600", "#c45850"],
+                        data: data
+                    }
+                ]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {display: false},
+                title: {
+                    display: true,
+                    text: title
                 }
-                else {
-                    // Open this row
-                    row.child( details(row.data()) ).show();
-                    tr.addClass('shown');
-                }
-            });
-
+            }
         });
-    </script>
+    }
+
+    $(document).ready(function () {
+        const table = $('#resultats').DataTable({
+            "processing": true,
+            "ajax": {
+                "processing": true,
+                "url": "{% url 'resultats_json' %}",
+                "dataSrc": ""
+            },
+            "columns": [
+                {
+                    "className": 'details-control',
+                    "orderable": false,
+                    "data": null,
+                    "defaultContent": ''
+                },
+                {"data": "pk"},
+                {"data": "fields.lastname"},
+                {"data": "fields.firstname"},
+                {"data": "fields.mail"},
+                {"data": "fields.score"},
+                {"data": "fields.time"},
+            ],
+            "order": [[1, 'asc']]
+        });
+        // Add event listener for opening and closing details
+        $('#resultats tbody').on('click', 'td.details-control', function () {
+            var tr = $(this).closest('tr');
+            var row = table.row(tr);
+
+            if (row.child.isShown()) {
+                // This row is already open - close it
+                row.child.hide();
+                tr.removeClass('shown');
+            } else {
+                // Open this row
+                let data = row.data();
+                console.log(data);
+                row.child(details(data)).show();
+                let labels_x = ['Enigme 1.1', 'Enigme 1.2', 'Enigme 1.3', 'Enigme 2.1', 'Enigme 2.2', 'Enigme 2.3', 'Enigme 3.1', 'Enigme 3.2', 'Enigme 3.3'];
+
+                let data_time = Object.keys(data.fields)
+                    .filter(key => key.includes('t_answer'))
+                    .reduce((obj, key) => {
+                        return {
+                            ...obj,
+                            [key]: data.fields[key]
+                        };
+                    }, {});
+
+                let data_attempt = Object.keys(data.fields)
+                    .filter(key => key.includes('tentative'))
+                    .reduce((obj, key) => {
+                        return {
+                            ...obj,
+                            [key]: data.fields[key]
+                        };
+                    }, {});
+
+                var obj = data.fields;
+                var score_logic = (obj.score1_1 + obj.score2_1 + obj.score3_1) / 3;
+                var score_tools = (obj.score2_2 + obj.score3_2) / 2;
+                var score_crypto = (obj.score1_2 + obj.score1_3) / 2;
+                var score_stegano = (obj.score2_3 + obj.score3_3) / 2;
+
+                let labels_skill = ['Logique', 'Outils web', 'Cryptographie', 'Steganographie'];
+                let data_skill = [score_logic, score_tools, score_crypto, score_stegano];
+
+                chart_bar('bar-chart-attempt-' + data.pk, labels_x, Object.values(data_attempt), 'Nombre de tentatives', 'Nombre de tentatives pour chaque énigme');
+                chart_bar('bar-chart-time-' + data.pk, labels_x, Object.values(data_time), 'Temps(en secondes)', 'Temps pour chaque énigme');
+                chart_bar('bar-chart-skill-' + data.pk, labels_skill, Object.values(data_skill), 'Points', 'Point pour chaque compétence', 'radar');
+                tr.addClass('shown');
+            }
+        });
+    });
+</script>
 {% endblock %}
 
 
