--- a/rh/templates/menu/dashboard.html
+++ b/rh/templates/menu/dashboard.html
@@ -81,6 +81,10 @@
                         angleLines: {
                             display: false
                         },
+                        ticks:{
+                            min: 0,
+                            beginAtZero: true
+                        }
                     }
                 }
 
